--- a/src/app/components/aggiungi/aggiungi.component.css
+++ b/src/app/components/aggiungi/aggiungi.component.css
@@ -7,6 +7,78 @@ main{
   background-position: center;
 
 }
+/* Testo di avviso in rosso e più piccolo */
+.warning-text {
+  color: red;
+  font-size: 12px;
+  font-weight: bold;
+  margin-left: 10px;
+}
+/* Stile generale per la mappa */
+.google-map-container {
+  position: relative;
+  width: 100%;
+  height: 400px;
+  border-radius: 8px;
+  overflow: hidden;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease;
+}
+
+/* Animazione per l'ingresso della mappa */
+.google-map-container google-map {
+  transition: transform 0.4s ease-in-out;
+}
+
+.google-map-container:hover {
+  transform: scale(1.03);
+}
+
+/* Bottone di conferma posizione */
+.confirm-button {
+  background-color: #2b374c; /* Verde brillante */
+  color: white;
+  font-size: 16px;
+  padding: 12px 24px;
+  border: none;
+  border-radius: 30px;
+  cursor: pointer;
+  transition: background-color 0.3s, transform 0.3s;
+  margin-top: 15px;
+  display: inline-block;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.confirm-button:hover {
+  background-color: #515351;
+  transform: translateY(-2px); /* Effetto di sollevamento */
+}
+
+.confirm-button:active {
+  background-color: #101010;
+  transform: translateY(0); /* Effetto di ritorno */
+}
+
+/* Transizioni per il bottone su focus e hover */
+.confirm-button:focus {
+  outline: none;
+  box-shadow: 0 0 0 2px rgba(0, 123, 255, 0.5);
+}
+
+/* Stile per i campi di input della mappa */
+input {
+  border-radius: 4px;
+  border: 1px solid #ccc;
+  padding: 10px;
+  width: 100%;
+  margin: 8px 0;
+  transition: border-color 0.3s ease;
+}
+
+input:focus {
+  border-color: #4CAF50;
+  outline: none;
+}
 
 
 .wizard-container {
