--- a/src/app/components/contattavenditore/contattavenditore.component.html
+++ b/src/app/components/contattavenditore/contattavenditore.component.html
@@ -16,24 +16,12 @@
       <div class="modal-body">
         <form [formGroup]="contactForm" (ngSubmit)="onSubmit()">
           <div class="mb-3">
+            <label for="oggetto" class="form-label">Oggetto</label>
+            <input id="oggetto" formControlName="oggetto" class="form-control">
+          </div>
+          <div class="mb-3">
             <label for="messaggio" class="form-label">Messaggio</label>
-            <textarea id="messaggio" formControlName="messaggio" class="form-control" rows="3"></textarea>
-          </div>
-          <div class="mb-3">
-            <label for="email" class="form-label">Email</label>
-            <input type="email" id="email" formControlName="email" class="form-control" />
-          </div>
-          <div class="mb-3">
-            <label for="telefono" class="form-label">Telefono</label>
-            <input type="text" id="telefono" formControlName="telefono" class="form-control" />
-          </div>
-          <div class="mb-3">
-            <label for="nome" class="form-label">Nome</label>
-            <input type="text" id="nome" formControlName="nome" class="form-control" />
-          </div>
-          <div class="mb-3">
-            <label for="cognome" class="form-label">Cognome</label>
-            <input type="text" id="cognome" formControlName="cognome" class="form-control" />
+            <textarea id="messaggio" formControlName="descrizione" class="form-control" rows="3"></textarea>
           </div>
           <button type="submit" class="btn btn-primary" [disabled]="contactForm.invalid">Invia</button>
         </form>
