cookies,privacy,termini

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -12,7 +12,7 @@
         <h3>Informazioni</h3>
         <ul>
           <li><a href="/privacy">Privacy</a></li>
-          <li><a href="/terms">Termini e Condizioni</a></li>
+          <li><a href="/termini">Termini e Condizioni</a></li>
           <li><a href="/cookies">Uso dei Cookies</a></li>
         </ul>
       </div>
