--- a/src/app/components/annunci/annuncio-dettaglio/annuncio-dettaglio.component.html
+++ b/src/app/components/annunci/annuncio-dettaglio/annuncio-dettaglio.component.html
@@ -32,7 +32,7 @@
     </google-map>
   </div>
 
-  <app-contattavenditore></app-contattavenditore>
+  <app-contattavenditore [immobileId]="immobileId"></app-contattavenditore>
 
   <!-- Galleria immagini -->
   <div class="galleria">
