mappe con marker dal back end

--- a/src/app/components/aggiungi/aggiungi.component.html
+++ b/src/app/components/aggiungi/aggiungi.component.html
@@ -33,6 +33,7 @@
           <select id="categoria" formControlName="categoria">
             <option value="Vendita">Vendita</option>
             <option value="Affitto">Affitto</option>
+            <option value="Aste">Aste</option>
           </select>
         </div>
 
