--- a/src/app/components/annunci/annuncio-dettaglio/annuncio-dettaglio.component.html
+++ b/src/app/components/annunci/annuncio-dettaglio/annuncio-dettaglio.component.html
@@ -43,6 +43,6 @@
   </div>
 </div>
 
-<app-recensione></app-recensione>
+<app-recensione [immobileId]="immobileId"></app-recensione>
 
 <app-footer></app-footer>
