--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -86,7 +86,7 @@
     <ul>
       <li style="--i:#616768;--j:#0b1217;">
         <span class="icon">💬</span>
-        <span class="title" (click)="navigateTo('/messaggi')">Notifiche</span>
+        <span class="title" (click)="notifiche()">Notifiche</span>
       </li>
     </ul>
   </div>
