--- a/src/app/components/messaggi/messaggi.component.html
+++ b/src/app/components/messaggi/messaggi.component.html
@@ -7,16 +7,16 @@
 
   <div class="message-item" *ngFor="let message of messages; let i = index">
     <div class="message-item-header">
-      <h2>{{ message.title }}</h2>
-      <p class="username">Username: {{ message.username }}</p>
-      <p class="property-name">Immobile: {{ message.propertyName }}</p>
+      <h2>{{ message.oggetto }}</h2>
+      <p class="username">Username: {{ message.acquirente }}</p>
+      <p class="property-name">Immobile: {{ message.nomeImmobile }}</p>
     </div>
 
     <!-- Aggiunta della classe 'show' dinamicamente in base a 'expanded' -->
     <div class="message-item-body" [ngClass]="{ 'show': message.expanded }">
-      <p class="description">{{ message.description }}</p>
+      <p class="description">{{ message.descrizione }}</p>
       <p class="email">Email: {{ message.email }}</p>
-      <p class="phone">Telefono: {{ message.phone }}</p>
+      <p class="phone">Telefono: {{ message.telefono }}</p>
     </div>
 
     <div class="message-item-footer">
