--- a/src/app/components/annunci/annunci.component.html
+++ b/src/app/components/annunci/annunci.component.html
@@ -16,10 +16,7 @@
     <div class="col-lg-4 col-md-6 col-sm-12 mb-4" *ngFor="let immobile of immobiliminimal">
       <div class="card shadow-lg h-100">
 
-        <!-- Immagine Annuncio -->
-        <img [src]="getImageSrc(immobile)"
-             class="card-img-top immagine-annuncio"
-             alt="Immagine immobile">
+        <img [src]="getImageSrc(immobile)" alt="Immagine immobile" (error)="onImageError($event)">
 
         <div class="card-body d-flex flex-column">
           <h5 class="card-title">{{ immobile.nome }}</h5>
