--- a/src/app/components/annunci/annunci.component.html
+++ b/src/app/components/annunci/annunci.component.html
@@ -16,7 +16,9 @@
     <div class="col-lg-4 col-md-6 col-sm-12 mb-4" *ngFor="let immobile of immobiliminimal">
       <div class="card shadow-lg h-100">
 
-        <img [src]="getImageSrc(immobile.immagine)" alt="Immagine immobile" (error)="onImageError($event)">
+        <div class="galleria">
+          <img class="galleria-img" [src]="getImageSrc(immobile.immagine)" alt="Immagine immobile" (error)="onImageError($event)">
+        </div>
 
         <div class="card-body d-flex flex-column">
           <h5 class="card-title">{{ immobile.nome }}</h5>
