messaggio che non viene inviato se acquirente e venditore sono lo stesso utente

--- a/src/app/components/annunci/annuncio-dettaglio/annuncio-dettaglio.component.html
+++ b/src/app/components/annunci/annuncio-dettaglio/annuncio-dettaglio.component.html
@@ -40,7 +40,7 @@
     </google-map>
   </div>
 
-  <app-contattavenditore [immobileId]="immobileId"></app-contattavenditore>
+  <app-contattavenditore [venditore]="immobileDetails.utente.username" [immobileId]="immobileId"></app-contattavenditore>
 
   <!-- Galleria immagini -->
   <div class="galleria">
