--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,8 @@
 
+<!-- app.component.html -->
+<div *ngIf="loading" class="loading-overlay">
+  <app-loading></app-loading>
+</div>
+
+
 <router-outlet></router-outlet>
