--- a/src/app/components/loading/loading.component.html
+++ b/src/app/components/loading/loading.component.html
@@ -1,5 +1,5 @@
-<!-- loading-spinner.component.html -->
+
 <div class="loading-spinner">
   <p>Caricamento...</p>
-  <div class="spinner"></div> <!-- Aggiungi una classe CSS per un'animazione di caricamento -->
+  <div class="spinner"></div>
 </div>
