--- a/src/app/components/about/about.component.css
+++ b/src/app/components/about/about.component.css
@@ -1,4 +1,3 @@
-/* Global Styles */
 
 header {
   position: fixed;
@@ -22,7 +21,6 @@ a {
   text-decoration: none;
 }
 
-/* Sezione Chi Siamo */
 .about-us {
   padding: 3rem 1.5rem;
   background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.8)),  url('/assets/aboutScreen.jpg');
@@ -34,7 +32,7 @@ a {
   margin-top: 3rem;
   text-align: center;
   padding: 3rem 1.5rem;
-  background: linear-gradient(120deg, #1a1a1a, #4f4f4f); /* Nero profondo a grigio scuro */
+  background: linear-gradient(120deg, #1a1a1a, #4f4f4f);
   color: #ffffff;
   border-radius: 12px;
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
@@ -75,11 +73,10 @@ a {
   transform: translateY(-5px);
 }
 
-/* Sezione Missione e Visione */
 .mission-vision {
   margin-top: 3rem;
   padding: 3rem 1.5rem;
-  background: linear-gradient(135deg, #202020, #5a5a5a); /* Grigio grafite a grigio medio */
+  background: linear-gradient(135deg, #202020, #5a5a5a);
   text-align: center;
   color: #f2f2f2;
   border-radius: 12px;
@@ -101,11 +98,10 @@ a {
   margin: 0 auto 3rem auto;
 }
 
-/* Sezione Membri del Team */
 .team {
   margin: 3rem auto;
   padding: 3rem 1.5rem;
-  background: linear-gradient(135deg, #000000, #2c2c2c); /* Nero intenso a carbone */
+  background: linear-gradient(135deg, #000000, #2c2c2c);
   color: #eaeaea;
   border-radius: 12px;
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
@@ -151,11 +147,11 @@ a {
   font-size: 0.9rem;
 }
 
-/* Sezione Testimonianze */
+
 .testimonials {
   margin: 3rem auto;
   padding: 3rem 1.5rem;
-  background: linear-gradient(135deg, #202020, #5a5a5a); /* Grigio grafite a grigio medio */
+  background: linear-gradient(135deg, #202020, #5a5a5a);
   text-align: center;
   color: #f2f2f2;
   border-radius: 12px;
@@ -184,11 +180,10 @@ a {
   font-weight: bold;
 }
 
-/* Sezione Storia */
 .history {
   margin: 3rem auto;
   padding: 3rem 1.5rem;
-  background: linear-gradient(120deg, #121212, #3e3e3e); /* Nero vellutato a grigio ardesia */
+  background: linear-gradient(120deg, #121212, #3e3e3e);
   text-align: center;
   color: #ffffff;
   border-radius: 12px;
@@ -209,7 +204,7 @@ a {
   line-height: 1.6;
 }
 
-/* Sezione Location (Sede e Mappa) */
+
 .location-container {
   display: flex;
   justify-content: center;
@@ -218,7 +213,7 @@ a {
   margin-top: 3rem;
   flex-wrap: wrap;
   padding: 3rem 1.5rem;
-  background: linear-gradient(120deg, #0d0d0d, #393939); /* Nero profondo a grigio fumé */
+  background: linear-gradient(120deg, #0d0d0d, #393939);
   color: #eaeaea;
   border-radius: 12px;
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
