--- a/src/app/components/adminpage/adminpage.component.html
+++ b/src/app/components/adminpage/adminpage.component.html
@@ -1,6 +1,5 @@
 <!-- Bootstrap CSS -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-<!-- Bootstrap JS (facoltativo, solo se servono componenti interattivi come modali o dropdown) -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
 
@@ -21,13 +20,13 @@
         <thead class="table-dark">
         <tr>
           <th>Username</th>
-          <th>Ruolo</th> <!-- Aggiunta colonna per il ruolo -->
+          <th>Ruolo</th>
         </tr>
         </thead>
         <tbody>
         <tr *ngFor="let user of userList">
           <td>{{ user.username }}</td>
-          <td>{{ user.role }}</td> <!-- Mostra il ruolo -->
+          <td>{{ user.role }}</td>
         </tr>
         </tbody>
       </table>
@@ -35,7 +34,7 @@
 
     </div>
 
-    <!-- Cambia ruolo utente -->
+    <!-- cambia ruolo utente -->
     <div class="changeUserTypeSection">
       <h3>Cambia ruolo utente</h3>
       <div class="changeUserTypeContainer">
@@ -53,7 +52,7 @@
 
     <hr class="horizontalrow2">
 
-    <!-- Banna utente -->
+    <!-- banna utente -->
     <div class="banUserSection">
       <h3>Banna utente</h3>
       <div class="banUserContainer">
