--- a/src/app/components/annunci/annunci.component.html
+++ b/src/app/components/annunci/annunci.component.html
@@ -2,16 +2,14 @@
   <navbar></navbar>
 </header>
 
-<!-- Titolo Pagina -->
 <div class="container mt-5">
   <h2 class="text-center mb-4">🏡 Annunci Disponibili</h2>
 
-  <!-- Mostra un messaggio se non ci sono annunci -->
   <div *ngIf="immobiliminimal.length === 0" class="alert alert-warning text-center">
     Nessun annuncio trovato. Prova a modificare i filtri di ricerca.
   </div>
 
-  <!-- Lista degli immobili -->
+  <!-- lista degli immobili -->
   <div class="row justify-content-center">
     <div class="col-lg-4 col-md-6 col-sm-12 mb-4" *ngFor="let immobile of immobiliminimal">
       <div class="card shadow-lg h-100">
@@ -30,7 +28,6 @@
             <li><strong>Superficie:</strong> {{ immobile.mq }} m²</li>
           </ul>
 
-          <!-- Pulsante Dettagli -->
           <div class="mt-auto text-center">
             <a [routerLink]="['/annunci', immobile.id]"  class="btn btn-primary">Dettagli</a>
           </div>
@@ -40,7 +37,6 @@
   </div>
 </div>
 
-<!-- Footer -->
 <footer class="footer mt-5">
   <app-footer></app-footer>
 </footer>
